5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1575_579.log
== TEST (2019-03-12 13:22:23) 
-- CODE:
print(A UFAM tem¨,2016-1909,¨anos de fudacao)
-- ERROR:
File "XXXX", line 1
    print(A UFAM tem¨,2016-1909,¨anos de fudacao)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:41) 
-- CODE:
print(¨A UFAM tem¨,2016-1909,¨anos de fudacao)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨,2016-1909,¨anos de fudacao)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:22:46) 
-- CODE:
print(¨A UFAM tem¨,2016-1909,¨anos de fudacao)
-- EXECUTION TIME:
0.139943
-- ERROR:
  File "/home/codebench/codes/1575/579/main.py", line 1
    print(\xa8A UFAM tem\xa8,2016-1909,\xa8anos de fudacao)
           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:23:23) 
-- CODE:
print(¨A UFAM tem¨, 2016-1909,¨anos de fundacao.¨)
-- EXECUTION TIME:
0.130623
-- ERROR:
  File "/home/codebench/codes/1575/579/main.py", line 1
    print(\xa8A UFAM tem\xa8, 2016-1909,\xa8anos de fundacao.\xa8)
           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:23:34) 
-- CODE:
print(¨A UFAM tem¨, 2016-1909,¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨, 2016-1909,¨anos de fundacao.¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:23:49) 
-- CODE:
print(¨A UFAM tem¨, 2016 - 1909,¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨, 2016 - 1909,¨anos de fundacao.¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:23:54) 
-- CODE:
print(¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:23:58) 
-- CODE:
print(¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:25:09) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao".)
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 1909, "anos de fundacao".)
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:25:35) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao".)
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 1909, "anos de fundacao".)
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:25:51) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:25:52) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.146342
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
